# paa

./: .gitignore  BitWriter.cpp  BitWriter.h  CMakeLists.txt  Compression.cpp  Compression.h  FormatoCompressao.md  FrequencyMap.cpp  FrequencyMap.h  HuffmanTree.cpp  HuffmanTree.h  README.md  generate_test.py  main.cpp  util.cpp  util.h
Grafos/: CMakeLists.txt  compile_flags.txt
Grafos/src/: Aresta.cpp  Grafo.cpp  GrafoNaoOrientado.cpp  GrafoOrientado.cpp  Vertice.cpp  main.cpp  util.cpp
Grafos/src/include/: Aresta.h  Grafo.h  GrafoNaoOrientado.h  GrafoOrientado.h  Vertice.h  util.h
Huffman/: CMakeLists.txt  FormatoCompressao.md  README.md  generate_test.py
Huffman/src/: BitReader.cpp  BitWriter.cpp  Decompressor.cpp  FileReader.cpp  FrequencyMap.cpp
Huffman/src/include/: BitWriter.h  Compressor.h  Decompressor.h  FrequencyMap.h  util.h
PAA-CUDA/: somaVetores.cu
src/: BitReader.cpp  BitReader.h  BitWriter.cpp  Compressor.cpp  Decompressor.cpp  FileReader.cpp  FrequencyMap.cpp  HuffmanCode.cpp  main.cpp  util.cpp
src/include/: BitReader.h  BitWriter.h  Compressor.h  Decompressor.h  FileReader.h  FrequencyMap.h  HuffmanCode.h  util.h
